2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-lisp): Install shimbun/ChangeLog file.

2007-04-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-support-emacs-w3m): New variable.
	(w3m-compile-options): Set w3m-support-emacs-w3m to t if w3m compiled
	with emacsdump.
	(w3m-strike-through-face-no-windowsystem): New face.
	(w3m-halfdump-command-arguments): Use '-emacsdump' instead of
	'-halfdump' when w3m has it.
	(w3m-fontify-strike-through): Support w3m-support-emacs-w3m.
	(w3m-fontify-insert): Ditto.

2007-04-24  Naohiro Aota <nao.aota@gmail.com>

	* w3m.el (w3m-goto-url): Set truncate-lines to nil, if a source or
	header view.
	(w3m-view-source): Remove to set truncate-lines.
	(w3m-view-header): Ditto.

2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ChangeLog, ChangeLog.1: Separate shimbun entries.
	(Local Variables): Set fill-column to 79.

2007-04-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea-filename): Use MD5 first.

2007-04-14  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-filename): Truncate filename
	into less than or equal to 255 bytes long.

2007-04-06  Matt Hodges  <M.P.Hodges@rl.ac.uk>

	* w3m.el (w3m-next-buffer): Fix last change when w3m-fb-mode.

2007-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Use numbered prefix argument to move
	the parent directory according to input number.

2007-03-31  Andreas Seltenreich  <seltenreich@gmx.de>

	* w3m.el (w3m-external-view-file): Actually kill the temporary buffer.

2007-03-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Sleep anyway.
	(w3m-tab-make-keymap): Add key-bindings for mouse wheel-up|down to
	w3m-mode-map.

2007-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add gtk.
	(report-emacs-w3m-bug): Bind print-quoted to t.
